# alphaevolve

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
alphaevolve/: agent.py  cli.py  config.py  search.py  secrets.py  utils.py
notebooks/: alphaevolve-gemma2-it.ipynb
